fixed fromsec3 collapse active

--- a/scss/component/_collapse.scss
+++ b/scss/component/_collapse.scss
@@ -81,8 +81,9 @@
                   padding-left: 7%;
                   &:first-child {
                       text-align: center;
-                      padding-left: 0;
                       width: 15%;
+                      padding: 0;
+                      vertical-align: middle;
                   }
                   img {
                       max-width: 20px;
